migrate remaining unit tests to JUnit 5 (e.g. imports, asserts, syntax)